feat: adjustment writing technologies

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>Sempre fui <strong>interessado por técnologia</strong>, desde o primeiro contato com a área através
                     de um curso
                     de informatica gratuíto, ali foi despertando ainda mais o interesse até os dias de hoje. Fui
-                    consolidando meu conhecimento em <strong>técnologias abrangentes</strong> como <strong>Lavarel,
+                    consolidando meu conhecimento em <strong>técnologias abrangentes</strong> como <strong>Laravel,
                         Node.js e
                         React.js,</strong> onde
                     contribuiram para que eu fosse capaz de atuar em projetos de diversas proporções.</p>
